--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
     padding: 250px;
     margin: auto;
 }
+
+
 nav{
     background-color: #333;
     padding: 20px;
@@ -14,20 +16,21 @@ nav{
 }
 nav ul{
     background-color: #333;
-    text-decoration: none;
+    text-decoration: none;   
     color: #333;
 }
+
 
 nav ul li:hover {
     background-color: black;
 }
 #AboutMe{
-    color: blueviolet;
+    color: whitesmoke;
     font-size: 1rem;
-    background-color: antiquewhite;
+    background-color: grey;
 }
 a{
-    color: antiquewhite;
+    color: whitesmoke;
     text-decoration: none;
     font-size: 1.25rem;
 }
@@ -35,47 +38,62 @@ a{
     text-decoration: underline;
     padding-bottom: 20px;
 }
+#AboutMe p{
+    text-align: center;
+}
 .mepic{
     display: flex;
     flex-direction: row;
-    background-color: antiquewhite;
+    background-color: grey;
     justify-content: space-around;
     padding: 15px;
     height: 270px;
 }
 
+.mepic img{
+    border: 2px solid #333;
+}
+
 #MySkills{
-    color: blueviolet;
-    background-color: antiquewhite;
-    padding-bottom: 15px;
+    color: whitesmoke;
+    background-color: grey;
+    padding-bottom: 50px;
     padding-left: 40px;
     padding-right: 40px;
 }
 #MySkills h2{
     text-decoration: underline;
-    color: blueviolet;
-    padding: 20px;
+    color: whitesmoke;
+    padding-bottom: 40px;
+    padding-top: 40px;
+   
+}
+
+#MySkills p{
+    padding-left: 80px;
+    padding-right: 80px;
+    text-align: center;
 }
 .projhead{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    color: blueviolet;
+    color: whitesmoke;
     text-decoration: underline;
     font-size: 1.25rem;
-    background-color: antiquewhite;
-    padding-bottom: 25px;
+    background-color: grey;
+    padding-bottom: 40px;
 }
 #MyProjects{
-    background-color: antiquewhite;
-    color: blueviolet;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-bottom: 25px;
+    background-color: grey;
+    color: whitesmoke;
+    padding-left: 90px;
+    padding-right: 90px;
+    padding-bottom: 40px;
 }
 #ContactMe{
     background-color: #333;
-    color: antiquewhite;
+    color: whitesmoke;
     padding-top: 10px;
     padding-bottom: 10px;
 }
@@ -84,4 +102,16 @@ a{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+
+h3{
+    padding-left: 50px;
+}
+h4{
+    padding-left: 40px;
+    padding-bottom: 8px;
+}
+
+#MyProjects article img{
+    border: 2px solid black;
 }
